# EAN_NLP_

./: pyproject.toml
Codigo/Semana 1/: NLP_Clase_1_2.ipynb
Codigo/Semana 2/: NLP_2_1_VE.ipynb  NLP_2_2_VE.ipynb
Codigo/Semana 3/: NLP_3_0_E.ipynb  NLP_3_1_E.ipynb  NLP_3_1_ultimo.ipynb
Codigo/Semana 4/: Analisis_Biblia_RVR.ipynb  NLP_4_1.ipynb
Codigo/Taller 1/: Comentarios_Mercadolibre.xlsx  Mercadolibre_Limpio.xlsx  Test_Mercadolibre_F.ipynb
Codigo/Taller 2/: Taller_2_Prueba (1).ipynb  Taller_2_Twitter.ipynb
Codigo/Taller 3/: Taller_IMDB.ipynb  Taller_Tf_idf_Part.ipynb  Taller_Word2Vec_Part.ipynb
