[tool.poetry]
name = "nlp-ean"
version = "0.1.0"
description = "Paquete para procesar NLP"
authors = ["carteag43066 <carteag43066@universidadean.edu.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
xgboost = "^2.1.3"
symspellpy = "^6.7.8"
imblearn = "^0.0"
nltk = "^3.9.1"
textblob = "^0.18.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
