[tool.poetry]
name = "nlp-t3"
version = "0.1.0"
description = "NLP"
authors = ["carteag43066 <carteag43066@universidadean.edu.co>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "1.21.6"
pandas = "1.3.5"
matplotlib = "3.5.0"
scikit-learn = "1.0.2"
gensim = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
